tests/paczka1/fuzzy1/14975264.err
Error in line 18: uMFU A495 59,7
Error in line 27: 23QYHMXQd A25 149,4
